--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Home - My Favorite Movies</title>
     </head>
     <body>
-        <div img src="https://images.app.goo.gl/c7QFC1dFLWjqP4kz6">
+        <div>
             <h1>Welcome to the show!</h1>
             <p>Hello everyone!</p>
             <p>I'll be sharing 10 of my most favorite movies of all time.</p>
